syntax = 'proto3';
package health;
option go_package = "api/v1/health";

import "google/api/annotations.proto";

message HealthRequest {}

message HealthResponse {
    string message = 1;
}

service HealthService {
    rpc HealthCheck (HealthResponse) returns (HealthResponse) {
        option (google.api.http) = {
            get: "/health"
        };
    };
}